--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,9 @@ jobs:
 
     - name: Test with black
       if: always()
-      run: black --check .
+      run: |
+        pip install black
+        black --check .
 
     - name: Test with unittest
       if: always()
